ui/app/styles/components/console-ui-panel.scss
.console-ui-panel-scroller {
  background: linear-gradient(to right, #191A1C, #1B212D);
  height: 0;
  left: 0;
  min-height: 400px;
  overflow: auto;
  position: fixed;
  right: 0;
  transform: translate3d(0, -400px, 0);
  transition: min-height $speed ease-out, transform $speed ease-in;
  will-change: transform, min-height;
  z-index: 199;
}

.console-ui-panel {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  padding: $size-8 $size-8 $size-4;
  min-height: 100%;
  color: $white;
  font-size: $body-size;
  font-weight: $font-weight-semibold;
  transition: justify-content $speed ease-in;


  pre, p {
    background: none;
    color: inherit;
    font-size: $body-size;

    &:not(.console-ui-command):not(.CodeMirror-line) {
      padding-left: $console-spacing;
    }
  }

  .cm-s-hashi.CodeMirror {
    background-color: rgba($black, 0.5) !important;
    font-weight: $font-weight-normal;
    margin-left: $console-spacing;
    padding: $size-8 $size-4;
  }

  .button,
  {
    background: transparent;
    border: none;
    color: $grey-dark;
    min-width: 0;
    padding: 0 $size-8;

    &.active,
    &:hover {
      background: $blue;
      color: $white;
    }
  }
}

.console-ui-input {
  align-items: center;
  display: flex;


  input {
    background-color: rgba($black, 0.5);
    border: 0;
    caret-color: $white;
    color: $white;
    flex: 1;
    font-family: $family-monospace;
    font-size: $body-size;
    font-weight: $font-weight-bold;
    margin-left: -$size-10;
    outline: none;
    padding: $size-10;
    transition: background-color $speed;
  }
}

.console-ui-command {
  line-height: 2;
}

.console-ui-output {
  transition: background-color $speed;
  padding-right: $size-2;
  position: relative;

  .console-ui-output-actions {
    opacity: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: opacity $speed;
    will-change: opacity;
  }

  &:hover {
    background: rgba($black, 0.25);

    .console-ui-output-actions {
      opacity: 1;
    }
  }
}

.console-ui-alert {
  margin-left: calc(#{$console-spacing} - 0.33rem);
  position: relative;

  .icon {
    position: absolute;
    left: 0;
    top: 0;
  }
}

.panel-open .console-ui-panel-scroller  {
  box-shadow: $box-shadow-highest;
  transform: translate3d(0, 0, 0);
}

.panel-open .console-ui-panel-scroller.fullscreen  {
  bottom: 0;
  top: 0;
  min-height: 100%;
}

.panel-open {
  .navbar, .navbar-sections{
    transition: transform $speed ease-in;
  }
}

.panel-open.panel-fullscreen {
  .navbar, .navbar-sections{
    transform: translate3d(0, -100px, 0);
  }
}

.page-container > header {
  background: linear-gradient(to right, #191A1C, #1B212D);
}

header .navbar,
header .navbar-sections {
  z-index: 200;
  transform: translate3d(0, 0, 0);
  will-change: transform;
}

